plugins/kotlin/idea/tests/testData/highlighterMetaInfo/jvm/inspections/coroutines/coroutineContextWithJob/launch/JobInstance_plus_customFinalContext.kt.highlighting
// FIR_IDENTICAL
// HIGHLIGHT_WARNINGS
// WITH_COROUTINES
package test

import kotlinx.coroutines.CoroutineScope
import kotlinx.coroutines.Job
import kotlinx.coroutines.launch
import kotlin.coroutines.AbstractCoroutineContextElement
import kotlin.coroutines.CoroutineContext

class MyCustomContextElement : AbstractCoroutineContextElement(key = Companion) {
    companion object : CoroutineContext.Key<MyCustomContextElement>
}

fun CoroutineScope.test(job: Job) {
    launch(<!HIGHLIGHTING("severity='WARNING'; descr='Passing 'CoroutineContext' with a 'Job' to 'launch' builder can lead to structured concurrency violations'")!>job<!> + MyCustomContextElement()) {}
}
// TOOL: org.jetbrains.kotlin.idea.codeInsight.inspections.shared.coroutines.CoroutineContextWithJobInspection
